style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    color: #333;
}
header{
    background-color: #005f75;
    color: white;
    padding: 15px 0;
}
.header-contant{
    max-width: 1200px;
    margin: 0;
    display: flex;
    justify-content: space-between;
    align-items: last baseline;
} 
header h1 {
    margin-left: 20px;
}
nav ul{
    list-style: none;
    display: flex;
}
nav ul li{
    margin-right: 20px ;
}
nav ul li a{
    color: white;
    text-decoration: none;
    font-weight: bold;
}
#hero {
    background-image: url(ofc.jpeg);
    background-size: cover;
    height: 400px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: white;
}
button {
    padding: 10px 8px;
    border-radius: 5px;
    background-color: orangered;
}
button a{
    color: white;
    text-decoration: none;
    font-weight: bold;
}
.hero-contant {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 20px;
}
#services {
    background-color: #fff;
    padding: 20px;
    text-align: center;
}
#services h2{
    color: #0053bea1;
    margin-bottom: 15px;
}
#services ul{
    list-style: none;
    margin-left: 20px;
}
#services li{
    margin-bottom: 10px;
}
#about {
    background-color: rgb(207, 207, 207);
    padding: 20px;
    text-align: center;
}
#about h2{
    color: rgb(63, 161, 63);
    margin-bottom: 15px;
}
#contact{
    background-color: #fff;
    padding: 20px;
    text-align: center;
}
#contact h2 {
    color: #dc3545;
}
#contact p{
    margin-top: 15px;
}
footer{
    text-align: center;
    background-color: #005f75;
    padding: 20px;
    color: white;
}

